<resources>
    <string name="app_name">Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name :</string>
    <string name="order_no_1">Order No :</string>
    <string name="qty_10">Qty :</string>
    <string name="price_10">Price :</string>
    <string name="qty">Qty:</string>
</resources>